# slsk-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: modifiers.rs
src/: config.rs  constants.rs  file_transfer.rs  macros.rs  main.rs  packing.rs  peer_handling.rs  server_handling.rs  sql.rs  styles.rs  utils.rs
src/events/: mod.rs
src/gui/: mod.rs  styles.rs
src/gui/widgets/: button.rs  chatroom.rs  chatrooms.rs  dialog.rs  dropdown.rs  input.rs  list.rs  mod.rs  table.rs  tabs.rs
src/gui/windows/: chatrooms.rs  downloads.rs  filesearch.rs  login.rs  mod.rs  transfers.rs
src/messages/: distributed.rs  file.rs  macros.rs  mod.rs  peer.rs  peer_init.rs  server.rs
src/parsers/: aiff.rs  flac.rs  mod.rs  mp3.rs  ogg.rs  wav.rs
