[package]
name = "slsk-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
byte-unit = "5.0.3"
chrono = "0.4.31"
crossterm = "0.27.0"
getset = "0.1.2"
md-5 = "0.10.6"
num-format = "0.4.4"
ordered_hash_map = "0.2.0"
ratatui = "0.24.0"
smol = "1.3.0"
socket2 = "0.5.4"
textwrap = "0.16.0"
tokio = {version = "1.33.0", features = ["net", "macros", "sync", "rt-multi-thread", "io-util"]}
tui-input = "0.8.0"
tui-menu = "0.1.1"
