[package]
name = "slsk-rs"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
byte-unit = "5.0.3"
chrono = "0.4.31"
crossbeam-deque = "0.8.5"
crossterm = "0.27.0"
flate2 = "1.0.28"
getset = "0.1.2"
md-5 = "0.10.6"
num-format = "0.4.4"
ordered_hash_map = "0.2.0"
rand = "0.8.5"
ratatui = { version = "0.28.1", features = ["unstable-rendered-line-info", "unstable-widget-ref"] }
serde = { version = "1.0.219", features = ["derive"] }
smol = "1.3.0"
socket2 = "0.5.4"
sqlx = { version = "0.8.6", features = ["runtime-async-std", "sqlite"] }
textwrap = "0.16.0"
tokio = {version = "1.33.0", features = ["net", "macros", "sync", "rt-multi-thread", "io-util", "time"]}
toml = "0.8.23"
tui-input = "0.8.0"
tui-menu = "0.1.1"
tui-scrollview = "0.4.0"
walkdir = "2.5.0"